--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
