--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-in-viewport": "^1.0.0-alpha.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
