--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "gsap": "^3.11.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
