--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.4",
     "node-sass": "^8.0.0",
