--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -10,19 +10,18 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
-    "gsap": "^3.11.4",
-    "node-sass": "^8.0.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
-    "react-in-viewport": "^1.0.0-alpha.29"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "react-in-viewport": "^1.0.0-alpha.29",
+    "react-scrollspy": "^3.4.3",
     "vite": "^4.1.0"
   }
 }
