--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "emailjs": "^4.0.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
