Added email.js browser package

--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "emailjs": "^4.0.1",
