--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "rollup-plugin-copy": "^3.4.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
